<resources>
    <string name="app_name">Carrier</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="title_activity_rider_home">RiderHomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="MakeOffer">Make an Offer!</string>
    <string name="payment_received">Received Payment</string>
    <string name="confirm_completion">CONFIRM COMPLETION</string>
    <string name="Delete">Delete</string>
    <string name="title_activity_search_maps">Choose A Location</string>

    <!--Any string names starting with help will be to describe status to the user-->
    <string name="helpLegend">Legend</string>
    <string name="helpOpenText"><b>Open</b> - A newly created request. A driver has yet to offer to drive yet.</string>

    <string name="helpOfferedText"><b>Offered</b> - A request that has one or more drivers who have offered to take this request.</string>
    <string name="helpConfirmedText"><b>Confirmed</b> - A request that has an assigned driver.</string>
    <string name="helpCompleteText"><b>Complete</b> - A request that has arrived at its destination.</string>
    <string name="helpPaidText"><b>Paid</b> - A request that has been paid for.</string>
    <string name="helpCancelText"><b>Cancel</b> - A request that has been cancelled. This can occur anytime before the ride is complete.</string>
    <!-- activity_make_request.xml -->
    <string name="change_location_button_text">Change Start and End Points</string>
    <string name="fare_estimate_prompt">Fare offer:</string>
    <string name="dollar_sign">$</string>
    <string name="empty_fare">0.00</string>
    <string name="estimate_button_text">Estimate</string>
    <string name="description_prompt">Enter a description:</string>
    <string name="description_hint">Describe the ride you seek</string>
    <string name="submit_button_text">Submit</string>
    <!-- dialog_keyword_search.xml -->
    <string name="searchKeywordHint">Enter a keyword</string>

    <!--for RiderRequestActivity-->
    <string name="DriverHere">Driver: </string>
    <string name="RiderHere">Rider: </string>
    <string name="view_location_button_text">Continue to request</string>
    <string name="start_address">Start:</string>
    <string name="end_address">End:</string>
    <string name="description">Description:</string>
    <string name="Cancel">CANCEL</string>
    <string name="View_Offering_Drivers"><b>View Offering Drivers</b></string>
    <string name="vehiclePrompt"><b>If you have a vehicle please enter description here, otherwise click register.</b></string>
    <string name="searchAddressHint">Enter an address</string>
</resources>
